# trine-kv

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.claude/commands/: done.md  start-phase.md
.phrase/: current.md  decision.md  evidence.md  roadmap.md
.phrase/commands/: migrate-v3.md
.phrase/docs/: LESSONS.md
.phrase/modules/: pr_faq.md
.phrase/protocol/: titan-like-blob-storage-spec.md  trine-kv-v1-spec.md
.phrase/templates/: current_template.md  decision_template.md  evidence_delta_template.md  legacy_archive_readme.md
.rust-skills/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README-ja.md  README-zh.md  README.md  REVIEW.md  metadata.json  setup.sh  test-triggers.md  test-triggers.sh
.rust-skills/.claude/: settings.example.json
.rust-skills/.claude-plugin/: marketplace.json  plugin.json
.rust-skills/.codex/: INSTALL.md
.rust-skills/.github/: FUNDING.yml
.rust-skills/.opencode/: INSTALL.md
.rust-skills/_meta/: error-protocol.md  (+6 more)
benches/: v1_bench.rs
docs/: durability.md  release.md  usage.md
examples/: event_index.rs  quickstart.rs  user_store.rs
src/: blob.rs  bucket.rs  cache.rs  codec.rs  compaction.rs  db.rs  durability.rs  filter.rs  internal_key.rs  iterator.rs  keyspace.rs  lib.rs  manifest.rs  options.rs  point_value.rs  range_tombstone.rs  recovery.rs  search.rs  snapshot.rs  stats.rs  table.rs  transaction.rs  write_batch.rs
tests/: in_memory_iteration.rs  in_memory_mvcc.rs  in_memory_range_delete.rs  in_memory_transaction.rs  model_reference.rs  persistent_wal.rs  scaffold.rs
(+101 files in other folders)
