[package]
name = "trine-kv"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Embedded LSM MVCC key-value database."
readme = "README.md"
documentation = "https://docs.rs/trine-kv"
keywords = ["database", "embedded", "kv", "lsm", "mvcc"]
categories = ["database-implementations"]
include = [
    "/benches",
    "/docs",
    "/examples",
    "/src",
    "/tests",
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/Cargo.lock",
    "/Cargo.toml",
]

[lib]
name = "trine_kv"
path = "src/lib.rs"

[dependencies]
lz4_flex = "0.13.1"

[[bench]]
name = "v1_bench"
harness = false

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
